--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <html>
     <head>
         <title>Eat'n</title>
+        <link rel="stylesheet" href="styles.css">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-		<link rel="stylesheet" href="styles.css">
     </head>
-        <div class="header">
-            <h2>Header</h2>
+    <body>
+        <h1>Test</h1>
+        <div class="sidenav">
+          <a href="#">Link</a>
+          <a href="#">Link</a>
+          <a href="#">Link</a>
         </div>
-        <div class="row">
-            <div class="column side" style="background-color:#aaa;">Column</div>
-            <div class="column middle" style="background-color:#bbb;">Column</div>
-            <div class="column side" style="background-color:#ccc;">Column</div>
-        </div>
-        <div class="footer">
-            <p>Footer</p>
+        
+        <div class="content">
+          <h2>CSS Template</h2>
+          <p>A full-height, fixed sidenav and content.</p>
         </div>
     </body>
 </html>
