--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
+    <!-- test to make sure this worked -->
     <body>
         <div class="navbar">
             <div class="logo">Eat'n</div>
