functionality is indeed being added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <!-- Account icon needed here -->
                 <img src="assets/profile.png" alt="Profile">
             </div>
-            <a href="profile-page.html" class="profile-link">Profile</a>
+            <a href="#" onclick=isLoggedIn() class="profile-link">Profile</a>
         </div>
 
         <nav class="sidenav">
