--- a/login.html
+++ b/login.html
@@ -45,9 +45,9 @@
                 <h1>Log In</h1>
                 <p>Enter your credentials below!</p>
                 <!--Username or Email-->
-                <input type="text" placeholder="Email" name="user" id="user" required>
+                <input type="text" placeholder="Email" name="user" id="eml" required>
                 <!--Password-->
-                <input type="password" placeholder="Enter Password" name="psw" id="psw" required>
+                <input type="password" placeholder="Enter Password" name="psw" id="pswl" required>
                 <button id="login">Submit</button>
             </div>
         </div>
