logged in user data filled

--- a/profile-page.html
+++ b/profile-page.html
@@ -21,14 +21,14 @@
             <a href="#" class="profile-link">Profile</a>
         </div>
 
-        <h1>User Profile</h1>
+        <h1 id="huname">User Profile</h1>
         
         <div class="profile-page">
             <div class="left-section">
                 <img src="assets/profile.png" alt="User Profile" class="profile-picture">
                 <div class="user-info">
-                    <p><strong>Name:</strong> Faith</p>
-                    <p><strong>Email:</strong> faithlov@udel.edu</p>
+                    <p id="pname"><strong>Name:</strong> Faith</p>
+                    <p id="pemail"><strong>Email:</strong> faithlov@udel.edu</p>
                     <p><strong>Location:</strong> Newark DE</p>
                 </div>
             </div>
