got firebase auth working

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
         <link rel="stylesheet" href="css/checkIn-styles.css">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-compat.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-compat-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-compat-firestore.js"></script>
+        
     </head>
     <body>
         <div class="navbar">
@@ -105,6 +109,8 @@
                 </div><!-- Add more posts here -->       
             </div>
         </div>
+        <script src="js/firebaseInit.js"></script>
+        <script src="js/login.js"></script>
         <script src="js/checkInJs.js"></script>
     </body>
 </html>
