--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Eat'n</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/feed-styles.css">
+        <link rel="stylesheet" href="css/styles.css">
         <link rel="stylesheet" href="css/checkIn-styles.css">
         <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet'>
         <script src="https://kit.fontawesome.com/ed3900b259.js" crossorigin="anonymous"></script>
@@ -96,7 +96,6 @@
                         </div>
                     </div>
                 </div>
-                </div><!-- Add more posts here -->       
             </div>
         <script src="js/checkInJs.js"></script>
     </body>
