--- a/profile-page.html
+++ b/profile-page.html
@@ -4,6 +4,8 @@
         <title>Eat'n Profile</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="css/styles.css">
+        <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet'>
+        <script src="https://kit.fontawesome.com/ed3900b259.js" crossorigin="anonymous"></script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
@@ -65,7 +67,6 @@
                 <div class="picture">
                     <img src="picture2.jpg" alt="Picture 2">
                 </div>
-
                 <!-- Add more pictures here -->
             </div>
         </div>
