adding user info to the db

--- a/login.html
+++ b/login.html
@@ -36,6 +36,8 @@
                 <p>Sign Up for Eat'N!</p>
                 <!--Username-->
                 <input type="text" placeholder="Username" name="user" id="user" required>
+                <!--Name-->
+                <input type="text" placeholder="Name" name="name" id="name" required>
                 <!--Email-->
                 <input type="text" placeholder="Email" name="email" id="email" required>
                 <!--Password-->
