--- a/profile-page.html
+++ b/profile-page.html
@@ -34,6 +34,7 @@
             <div id="first" class="left-section">
                 <img src="assets/profile.png" alt="User Profile" class="profile-picture">
                 <div class="user-info">
+                    <p id="pusername"><strong>Username:</strong> Faith</p>
                     <p id="pname"><strong>Name:</strong> Faith</p>
                     <p id="pemail"><strong>Email:</strong> faithlov@udel.edu</p>
                     <p><strong>Location:</strong> Newark DE</p>
