adding search functionality on users

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <div class="navbar">
             <div class="logo">Eat'n</div>
             <div class="search-bar">
-                <input type="text" placeholder="Search...">
+                <input id="searchInput" type="text" placeholder="Search...">
+                <ul id="searchResults" class="search-results"></ul>
             </div>
             <div class="profile-icon">
                 <!-- Account icon needed here -->
@@ -81,5 +82,6 @@
         <script src="js/login.js"></script>
         <script src="js/checkInJs.js"></script>
         <script src="js/displayFeed.js"></script>
+        <script src="js/search.js"></script>
     </body>
 </html>
