adding follow request

--- a/userProfileTemplate.html
+++ b/userProfileTemplate.html
@@ -38,6 +38,8 @@
                     <p id="pname"><strong>Name:</strong> Faith</p>
                     <p id="pemail"><strong>Email:</strong> faithlov@udel.edu</p>
                     <p><strong>Location:</strong> Newark DE</p>
+                    <button id="followUserBtn">Follow</button>
+
                 </div>
             </div>
         </div>
