displayed follow requests on friends list page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <nav class="sidenav">
             <a href="page1.html"><img src="assets/saved.png" alt="Page 1"></a>
-            <a href="page2.html"><img src="assets/friends.png" alt="Page 2"></a>
+            <a href="friendsList.html"><img src="assets/friends.png" alt="Page 2"></a>
             <a href="page3.html"><img src="assets/trophy.png" alt="Page 3"></a>
         </nav>
 
