--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
         </div>
         <script src="js/firebaseInit.js"></script>
         <script src="js/login.js"></script>
-        <script src="js/checkInJs.js"></script>
         <script src="js/displayFeed.js"></script>
+        <!-- <script src="js/checkInJs.js"></script> -->
         <script src="js/search.js"></script>
     </body>
 </html>
