--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="css/styles.css">
         <link rel="stylesheet" href="css/checkIn-styles.css">
+        <link rel="stylesheet" href="css/search.css">
         <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet'>
         <script src="https://kit.fontawesome.com/ed3900b259.js" crossorigin="anonymous"></script>
         <meta charset="utf-8">
@@ -25,16 +26,15 @@
             <div class="search-nav">
                 <i class="fa-solid fa-magnifying-glass fa-xl" style="color: #102651; margin-top: 5%;"></i>
                 <div class="search-bar">
-                    <input id="searchInput" type="text" placeholder="What are your friends Eat'n?">
+                    <input id="searchInput" type="text" placeholder="Search...">
                 <ul id="searchResults" class="search-results"></ul>
                 </div>
             </div>
             <div class="profile-nav">
                 <!-- Account icon needed here -->
                 <i class="fa-solid fa-user"></i>
-                <a href="profile-page.html" class="profile-link">Profile</a>
+                <a href="profile-page.html" onclick=isLoggedIn() class="profile-link">Profile</a>
             </div>
-            <a href="#" onclick=isLoggedIn() class="profile-link">Profile</a>
         </div>
 
         <nav class="sidenav">
@@ -43,6 +43,7 @@
             <a href="page3.html"><i class="fa-solid fa-trophy fa-xl"></i></a>
             <a href="page3.html"><i class="fa-solid fa-bookmark fa-xl"></i></a>   
         </nav>
+
         <div class="check-in-stamp">
             <button class="check-in-btn" id="openModal">Check In!</button>
         </div>
@@ -87,6 +88,8 @@
                 </div>
             </div>
         </div>
+
+        <h1>What are your friends Eat'n?</h1>
 
         <!--content-->
         <div class="content">
