--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
 
         <nav class="sidenav">
-            <a href="page1.html"><i class="fa-solid fa-house fa-xl"></i></a>
+            <a href="index.html"><i class="fa-solid fa-house fa-xl"></i></a>
             <a href="friendsList.html"><i class="fa-solid fa-user-group fa-xl"></i></a>
             <a href="page3.html"><i class="fa-solid fa-trophy fa-xl"></i></a>
             <a href="page3.html"><i class="fa-solid fa-bookmark fa-xl"></i></a>   
