--- a/login.html
+++ b/login.html
@@ -4,6 +4,13 @@
         <title>Log In</title>
         <link rel="stylesheet" href="css/feed-styles.css">
         <link rel="stylesheet" href="css/login.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="css/feed-styles.css">
+        <link rel="stylesheet" href="css/checkIn-styles.css">
+        <link rel="stylesheet" href="css/friends-list.css">
+        <link rel="stylesheet" href="css/search.css">
+        <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet'>
+        <script src="https://kit.fontawesome.com/ed3900b259.js" crossorigin="anonymous"></script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-compat.js"></script>
@@ -12,23 +19,32 @@
         
     </head>
     <body>
-        <!--<script defer src="js/login.js"></script>-->
         <div class="navbar">
-            <div class="logo">Eat'n</div>
-            <div class="search-bar">
-                <input type="text" placeholder="Search...">
+            <svg xmlns="http://www.w3.org/2000/svg" width="199" height="67" viewBox="0 0 199 67" fill="none">
+                <circle cx="32.8558" cy="34.1442" r="32.8558" fill="#55566C"/>
+                <circle cx="76.6635" cy="34.1442" r="32.8558" fill="#FF2405"/>
+                <circle cx="120.471" cy="32.8558" r="32.8558" fill="#98C794"/>
+                <circle cx="165.567" cy="32.8558" r="32.8558" fill="#FFA05F"/>
+            </svg>
+            <div class="search-nav">
+                <i class="fa-solid fa-magnifying-glass fa-xl" style="color: #102651; margin-top: 5%;"></i>
+                <div class="search-bar">
+                    <input id="searchInput" type="text" placeholder="Search...">
+                <ul id="searchResults" class="search-results"></ul>
+                </div>
             </div>
-            <div class="profile-icon">
+            <div class="profile-nav">
                 <!-- Account icon needed here -->
-                <img src="assets/profile.png" alt="Profile">
+                <i class="fa-solid fa-user"></i>
+                <a href="profile-page.html" onclick=isLoggedIn() class="profile-link">Profile</a>
             </div>
-            <a href="profile-page.html" class="profile-link">Profile</a>
         </div>
 
         <nav class="sidenav">
-            <a href="page1.html"><img src="assets/saved.png" alt="Page 1"></a>
-            <a href="page2.html"><img src="assets/friends.png" alt="Page 2"></a>
-            <a href="page3.html"><img src="assets/trophy.png" alt="Page 3"></a>
+            <a href="index.html"><i class="fa-solid fa-house fa-xl"></i></a>
+            <a href="friendsList.html"><i class="fa-solid fa-user-group fa-xl"></i></a>
+            <a href="page3.html"><i class="fa-solid fa-trophy fa-xl"></i></a>
+            <a href="page3.html"><i class="fa-solid fa-bookmark fa-xl"></i></a>   
         </nav>
         <div class="container">
             <div class="signin">
@@ -63,5 +79,6 @@
         </div>
         <script src="js/firebaseInit.js"></script>
         <script src="js/login.js"></script>
+        <script src="js/search.js"></script>
     </body>
 </html>
