--- a/profile-page.html
+++ b/profile-page.html
@@ -4,7 +4,9 @@
 <head>
     <title>Eat'n Profile</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/profile-styles.css">
+    <link rel="stylesheet" href="/css/profile-styles.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/search.css">
     <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet'>
     <script src="https://kit.fontawesome.com/ed3900b259.js" crossorigin="anonymous"></script>
     <meta charset="utf-8">
@@ -18,7 +20,6 @@
 
 <body>
 
-    <!--TODO: Navbar css is currently duplicated in profile-styles and feed-styles... needs to be migrated to its own css sheet at some point so changes only have to be made once-->
     <div class="navbar">
         <svg xmlns="http://www.w3.org/2000/svg" width="199" height="67" viewBox="0 0 199 67" fill="none">
             <circle cx="32.8558" cy="34.1442" r="32.8558" fill="#55566C"/>
@@ -29,20 +30,29 @@
         <div class="search-nav">
             <i class="fa-solid fa-magnifying-glass fa-xl" style="color: #102651; margin-top: 5%;"></i>
             <div class="search-bar">
-                <input type="text" placeholder="What are your friends Eat'n?">
+                <input id="searchInput" type="text" placeholder="Search...">
+            <ul id="searchResults" class="search-results"></ul>
             </div>
         </div>
         <div class="profile-nav">
+            <!-- Account icon needed here -->
             <i class="fa-solid fa-user"></i>
-            <a href="profile-page.html" class="profile-link">Profile</a>
+            <a href="profile-page.html" onclick=isLoggedIn() class="profile-link">Profile</a>
         </div>
     </div>
 
+    <nav class="sidenav">
+        <a href="index.html"><i class="fa-solid fa-house fa-xl"></i></a>
+        <a href="friendsList.html"><i class="fa-solid fa-user-group fa-xl"></i></a>
+        <a href="page3.html"><i class="fa-solid fa-trophy fa-xl"></i></a>
+        <a href="page3.html"><i class="fa-solid fa-bookmark fa-xl"></i></a>   
+    </nav>
+
         <h1 id="huname">User Profile</h1>
         
-        <div class="profile-page">
-            <div class="left-section">
-                <img src="assets/profile.png" alt="User Profile" class="profile-picture">
+        <div id="pp" class="profile-page">
+            <div id="first" class="left-section">
+                <img src="assets/user.svg" alt="User Profile" class="profile-picture">
                 <div class="user-info">
                     <p id="pusername"><strong>Username:</strong> Faith</p>
                     <p id="pname"><strong>Name:</strong> Faith</p>
@@ -55,22 +65,9 @@
                 </div>
             </div>
         </div>
-
-        <div id="last" class="right-section">
-            <div class="picture">
-                <img src="picture1.jpg" alt="Picture 1">
-            </div>
-
-            <div class="picture">
-                <img src="picture2.jpg" alt="Picture 2">
-            </div>
-
-                <!-- Add more pictures here -->
-            </div>
-
-        </div>
         <script src="js/firebaseInit.js"></script>
         <script src="js/login.js"></script>
         <script src="js/updateProfile.js"></script>
+        <script src="js/search.js"></script>
     </body>
 </html>
