--- a/friendsList.html
+++ b/friendsList.html
@@ -3,12 +3,11 @@
     <head>
         <title>Eat'n</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/feed-styles.css">
-        <link rel="stylesheet" href="css/checkIn-styles.css">
-        <link rel="stylesheet" href="css/friends-list.css">
-        <link rel="stylesheet" href="css/search.css">
         <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet'>
         <script src="https://kit.fontawesome.com/ed3900b259.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/friends-list.css">
+        <link rel="stylesheet" href="css/search.css">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-compat.js"></script>
