--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-compat.js"></script>
         <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-compat-auth.js"></script>
         <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-compat-firestore.js"></script>
-        
+        <script src="jquery-3.7.1.min.js"></script>
     </head>
     <body>
         <div class="navbar">
