suggestion box styled

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <div class="input-container">
                         <i class="fa-regular fa-file-lines"></i>
                         <textarea id="orderInput" name="orderDescription" placeholder="Your food order!" oninput="handleOrderInput()"></textarea>
-                        <div id="suggestions"></div>
+                        <div id="suggestions" class="suggestions-box"></div>
                     </div>
                     <div class="save-order">
                         <input type="checkbox" id="saveOrder" name="saveOrder">
